# f2d_editor

include/led/f2d/: draw.h  draw.h~  frutti2d.h  frutti2d.h~  model.h~
include/led/f2d/math/: mat4.h~
include/led/f2d/wm/: events.h
shaders/: tex.frag  tex.vert
src/: CMakeLists.txt
src/led/: main.c
